--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -108,11 +108,11 @@ jobs:
         run: |
           echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
       - name: Retrieve slack message success template
-        run: echo SLACK_MESSAGE_SUCCESS=$(cat .github/successed_slack_message.json) >> $GITHUB_ENV
+        run: echo SLACK_MESSAGE_SUCCESS=$(jq -c . .github/successed_slack_message.json) >> $GITHUB_ENV
       - name: Retrieve slack message fail template
-        run: echo SLACK_MESSAGE_FAILURE=$(cat .github/failed_slack_message.tmpl) >> $GITHUB_ENV
+        run: echo SLACK_MESSAGE_FAILURE=$(cat .github/failed_slack_message.json) >> $GITHUB_ENV
       - name: Retrieve slack message abort template
-        run: echo SLACK_MESSAGE_ABORT=$(cat .github/aborted_slack_message.tmpl) >> $GITHUB_ENV
+        run: echo SLACK_MESSAGE_ABORT=$(cat .github/aborted_slack_message.json) >> $GITHUB_ENV
       - name: TEST template variable
         run: echo ${{ env.MY_STRING }}
 
